--- a/css/site.html
+++ b/css/site.html
@@ -10,10 +10,28 @@
 <body>
     <div id="site">
             <div id="heading">
-                
+                <img src="images/icon.png" height="80">
+                <h1>THE EASYLEARN ACADEMY</h1>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Courses</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Contact us</a></li>
+                </ul>
             </div>
             
-            <div id="menu"></div>
+            <div id="menu">
+                <ul>
+                    <li><a href="#">C</a></li>
+                    <li><a href="#">C++</a></li>
+                    <li><a href="#">JAVA</a></li>
+                    <li><a href="#">ANDROID</a></li>
+                    <li><a href="#">PHP</a></li>
+                    <li><a href="#">React JS</a></li>
+                    <li><a href="#">Node JS</a></li>
+                </ul>
+            </div>
             <div id="content"></div>
             <div id="sidebar"></div>
 
