--- a/css/aboutus.html
+++ b/css/aboutus.html
@@ -33,14 +33,22 @@
                 </ul>
             </div>
             <div id="content">
-                <h2>Page heading</h2>
+                <h2>About us </h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, laudantium. Magni esse perferendis deserunt quod numquam, error, quasi, quaerat illum expedita a veritatis officia ad alias. Quos nostrum nam quod provident enim ex soluta. Quo laudantium in reiciendis debitis ducimus pariatur eos, asperiores incidunt, ex et placeat. Id, quaerat perspiciatis?
                 </p>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ullam reprehenderit earum debitis. Dignissimos natus officiis odit fugiat minima consequuntur obcaecati incidunt similique nobis enim, rem consectetur odio sapiente cumque culpa reprehenderit fuga magnam inventore dolorum eligendi. Maxime alias veritatis debitis, impedit dolorum exercitationem sed inventore pariatur hic iure, nesciunt necessitatibus placeat vitae tempore eveniet dolor a. Porro, inventore incidunt.
                 </p>
-
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ullam reprehenderit earum debitis. Dignissimos natus officiis odit fugiat minima consequuntur obcaecati incidunt similique nobis enim, rem consectetur odio sapiente cumque culpa reprehenderit fuga magnam inventore dolorum eligendi. Maxime alias veritatis debitis, impedit dolorum exercitationem sed inventore pariatur hic iure, nesciunt necessitatibus placeat vitae tempore eveniet dolor a. Porro, inventore incidunt.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ullam reprehenderit earum debitis. Dignissimos natus officiis odit fugiat minima consequuntur obcaecati incidunt similique nobis enim, rem consectetur odio sapiente cumque culpa reprehenderit fuga magnam inventore dolorum eligendi. Maxime alias veritatis debitis, impedit dolorum exercitationem sed inventore pariatur hic iure, nesciunt necessitatibus placeat vitae tempore eveniet dolor a. Porro, inventore incidunt.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ullam reprehenderit earum debitis. Dignissimos natus officiis odit fugiat minima consequuntur obcaecati incidunt similique nobis enim, rem consectetur odio sapiente cumque culpa reprehenderit fuga magnam inventore dolorum eligendi. Maxime alias veritatis debitis, impedit dolorum exercitationem sed inventore pariatur hic iure, nesciunt necessitatibus placeat vitae tempore eveniet dolor a. Porro, inventore incidunt.
+                </p>
             </div>
             <div id="sidebar">
                 <div class="news">
