--- a/css/aboutus.html
+++ b/css/aboutus.html
@@ -19,8 +19,7 @@
                     <li><a href="#">Products</a></li>
                     <li><a href="contactus.html">Contact us</a></li>
                 </ul>
-            </div>
-            
+            </div> 
             <div id="menu">
                 <ul>
                     <li><a href="#">C</a></li>
@@ -49,6 +48,7 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ullam reprehenderit earum debitis. Dignissimos natus officiis odit fugiat minima consequuntur obcaecati incidunt similique nobis enim, rem consectetur odio sapiente cumque culpa reprehenderit fuga magnam inventore dolorum eligendi. Maxime alias veritatis debitis, impedit dolorum exercitationem sed inventore pariatur hic iure, nesciunt necessitatibus placeat vitae tempore eveniet dolor a. Porro, inventore incidunt.
                 </p>
+                <p><b>Good bye</b></p>
             </div>
             <div id="sidebar">
                 <div class="news">
