--- a/css/course.html
+++ b/css/course.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,63 +8,89 @@
     <title>Document</title>
     <link rel="stylesheet" href="style2.css" type="text/css" />
 </head>
+
 <body>
     <div id="site">
-            <div id="heading">
-                <img src="images/icon.png" height="80">
-                <h1>THE EASYLEARN ACADEMY</h1>
-                <ul>
-                    <li><a href="site.html">Home</a></li>
-                    <li><a href="aboutus.html">About us</a></li>
-                    <li><a href="#">Courses</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="contactus.html">Contact us</a></li>
-                </ul>
-            </div> 
-            <div id="menu">
-                <ul>
-                    <li><a href="#">C</a></li>
-                    <li><a href="#">C++</a></li>
-                    <li><a href="#">JAVA</a></li>
-                    <li><a href="#">ANDROID</a></li>
-                    <li><a href="#">PHP</a></li>
-                    <li><a href="#">React JS</a></li>
-                    <li><a href="#">Node JS</a></li>
-                </ul>
-            </div>
-            <div id="content">
-                <h2>Course</h2>
-                <div id="courses">
+        <div id="heading">
+            <img src="images/icon.png" height="80">
+            <h1>THE EASYLEARN ACADEMY</h1>
+            <ul>
+                <li><a href="site.html">Home</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+                <li><a href="#">Courses</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
+            </ul>
+        </div>
+        <div id="menu">
+            <ul>
+                <li><a href="#">C</a></li>
+                <li><a href="#">C++</a></li>
+                <li><a href="#">JAVA</a></li>
+                <li><a href="#">ANDROID</a></li>
+                <li><a href="#">PHP</a></li>
+                <li><a href="#">React JS</a></li>
+                <li><a href="#">Node JS</a></li>
+            </ul>
+        </div>
+        <div id="content">
+            <h2>Course</h2>
+            <div id="courses">
+                <div class="course">
                     <div>
-                       <img src="https://picsum.photos/150" /> 
-                       <span class="course-title">React js</span>
-                       <span class="course-detail">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint explicabo laudantium laboriosam harum, officiis aspernatur recusandae assumenda ut vero atque nemo eligendi, laborum velit cumque, mollitia qui! Sint, iure ea.
-                       </span>
+                        <img src="https://picsum.photos/150" />
+                    </div>
+                    <div class="course-info">
+                        <h2>React js</h2>
+                        <span class="course-detail">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint explicabo laudantium laboriosam
+                            harum, officiis aspernatur recusandae assumenda ut vero atque nemo eligendi, laborum velit cumque,
+                            mollitia qui! Sint, iure ea.
+                        </span>
                     </div>
                 </div>
-            </div>
-            <div id="sidebar">
-                <div class="news">
-                    <h3>News heading</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eaque rerum perspiciatis iure corporis numquam? <a href="#">Read more</a>
-                    </p>
-
+                <div class="course">
+                    <div class="course-info">
+                        <h2>Flutter</h2>
+                        <span class="course-detail">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint explicabo laudantium laboriosam
+                            harum, officiis aspernatur recusandae assumenda ut vero atque nemo eligendi, laborum velit cumque,
+                            mollitia qui! Sint, iure ea.
+                        </span>
+                    </div>
+                    <div>
+                        <img src="https://picsum.photos/150" />
+                    </div>
+                   
                 </div>
-                <div class="news">
-                    <h3>News heading</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eaque rerum perspiciatis iure corporis numquam? <a href="#">Read more</a>
-                    </p>
-                    
-                </div>
-            </div>
 
-            <div id="footer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi minima quidem, dolore molestias cum dolorem!</p>
             </div>
         </div>
+        <div id="sidebar">
+            <div class="news">
+                <h3>News heading</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eaque rerum perspiciatis iure
+                    corporis numquam? <a href="#">Read more</a>
+                </p>
+
+            </div>
+            <div class="news">
+                <h3>News heading</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eaque rerum perspiciatis iure
+                    corporis numquam? <a href="#">Read more</a>
+                </p>
+
+            </div>
+        </div>
+
+        <div id="footer">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi minima quidem, dolore molestias cum
+                dolorem!</p>
+        </div>
+    </div>
     </div>
 </body>
+
 </html>
